Fixed text spacing in footer and cleaned up style.css file

--- a/src/style.css
+++ b/src/style.css
@@ -37,29 +37,9 @@ main {
     margin-bottom: 10vh;
 }
 
-
-
 a {
     text-decoration: none;
     color: #efefef;
-}
-
-.elite-message {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: #efefef;
-    background: linear-gradient(to right, red, blue);
-    border-radius: 0.125rem;
-    padding: 2rem;
-    font-size: 5rem;
-    z-index: 10;
-    visibility: hidden;
-}
-
-.display-elite-message {
-    visibility: visible;
 }
 
 .title-container {
@@ -75,7 +55,6 @@ a {
     width: 1000px;
 }
 
-
 .contact-icons i {
     font-size: 3rem;
     transition: opacity 0.3s;
@@ -86,15 +65,15 @@ a {
 }
 
 .linkedin-icon {
-    color: #267099;
+    color: #0a66c2;
 }
 
 .github-icon {
-    color: #b0afaf;
+    color: #efefef;
 }
 
 .mail-icon {
-    color: #a83d22;
+    color: #f84a3d;
 }
 
 .copy-right-symbol p {
@@ -141,105 +120,6 @@ a {
 }
 
 
-
-
-
-/*---------- About ----------*/
-
-/*.about-information-container {*/
-/*    display: grid;*/
-/*    grid-template-columns: 1fr 1fr 1fr;*/
-/*}*/
-
-/*.about-information-container > article, .about-information-container figure {*/
-/*    display: flex;*/
-/*    justify-content: center;*/
-/*    align-items: center;*/
-/*    height: 70vh;*/
-/*    min-width: 1fr;*/
-/*}*/
-
-/*.about-information-container > figure {*/
-/*    background-color: #efefef;*/
-/*}*/
-
-/*.about-information-container article p {*/
-/*    max-width: 15em;*/
-/*    font-size: 1.5rem;*/
-/*    font-family: "Crimson Pro", serif;*/
-/*}*/
-
-/*.about-information-container figure img {*/
-/*    height: 85%;*/
-/*    width: 85%;*/
-/*    object-fit: cover;*/
-/*}*/
-
-/*.tank-round-image {*/
-/*    object-position: center 40%;*/
-/*}*/
-
-/*.contact-me-article-content {*/
-/*    margin-top: 8rem;*/
-/*    width: 20rem;*/
-/*    display: flex;*/
-/*    flex-direction: column;*/
-/*    align-items: center;*/
-/*}*/
-
-/*.contact-me-button {*/
-/*    font-size: 1.5rem;*/
-/*    font-weight: bold;*/
-/*    border-width: 2px;*/
-/*    border-style: solid;*/
-/*    border-radius: 2px;*/
-/*    padding: 0.5rem 1rem;*/
-/*    cursor: pointer;*/
-/*    user-select: none;*/
-/*    transition: opacity 0.5s;*/
-/*    margin-top: 100px;*/
-/*}*/
-
-/*.contact-me-button:hover {*/
-/*    opacity: 0.5;*/
-/*}*/
-
-/*.contact-icons {*/
-/*    display: flex;*/
-/*    flex-wrap: wrap;*/
-/*    justify-content: space-between;*/
-/*    align-items: center;*/
-/*    width: 100%;*/
-/*    max-width: 15rem;*/
-/*    opacity: 0;*/
-/*    visibility: hidden;*/
-/*    transition: opacity 3s;*/
-/*}*/
-
-/*.remove-contact-me-text {*/
-/*    display: none;*/
-/*}*/
-
-/*.remove-contact-me-button {*/
-/*    display: none;*/
-/*}*/
-
-/*.display-contact-icons {*/
-/*    opacity: 1;*/
-/*    visibility: visible;*/
-/*}*/
-
-/*article:has(.display-contact-icons) {*/
-/*    .contact-me-article-content {*/
-/*        margin-top: 0;*/
-/*    }*/
-/*}*/
-
-/*@media (max-width: 700px) {*/
-/*    .about-information-container {*/
-/*        grid-template-columns: 1fr;*/
-/*    }*/
-/*}*/
 
 /*---------- Projects ----------*/
 
@@ -453,16 +333,6 @@ a {
 }
 
 /*---------- Easter Eggs ----------*/
-
-/*.elite-popup {*/
-/*    background: linear-gradient(to right, red, blue);*/
-/*}*/
-
-/*.display-elite-popup {*/
-/*    visibility: visible;*/
-/*    opacity: 1;*/
-/*    transition-delay: 0s;*/
-/*}*/
 
 .the-best-team-in-the-world {
     background: linear-gradient(
